=== ALPHA 3 ===

Now all the reliability infos are in their own panel in the editor.
Added pre-emptive maintenance for parts.
Fixed the bug that stops leaks when all the valves are shut off.
Implemented a temperature multiplier for the part's aging rate: the higher the part's temperature, the faster it will age.
Fixed the name that is displayed for a kerbal during EVA events.
Added support for engines that use ModuleEngineFX.
Added inspection: you can now inspect a part on EVA and get a message with a rough indication of the state of the part. Still hideous, but functional.
Timewarp now stops when a failure occurs.
Fixed the bug where the leak message was logged incorrectly in the flight log.
Fixed the formatting of the flight log messages.




=== ALPHA 2.2 ===

Added:
- Now failures are repairs are listed in the Flight Events log
- Master settings file: located in DangIt\PluginData\DangIt\DangIt.cfg (don't move it). Contains the leak blacklist and also 3 master switches to enable / disable messages and the red glow (and a placeholder for sounds). This file is reloaded at each flight scene. Silent failures will not display any notification even when the master is enabled. 

Fixed:
- the persistency of failures: now they should be loaded correctly between saves.
- the leak blacklist. Now it actually works.
- the lights on landing gear now fail correctly.
- the GUI of reaction wheels is now hidden when the wheel fails.
- new reliability buff for everything (+100% MTBF: I laughed at 343 for buffing the warthog by 30%)

Changed:
- small changed in the API regarding how failures are handled. I guess it doesn't really matter since I'm the only one using the API anyway.

=== ALPHA 2.1 ===

Added the black list for leaking tanks. Now you can prevent a resource from leaking by adding a field in the cfg file as:
    ignore = <resourcename>
    
Huge buff for all the reliability values.

=== ALPHA 2 ===

Big stuff: