@@ -9,6 +9,7 @@
 		RepairBonus = 0.1
 		MaintenanceCost = 2
 		MaintenanceBonus = 0.3
+        InspectionBonus = 60
 		Silent = false
     }
 }
@@ -21,6 +22,10 @@
         MTBF = 16000
         LifeTime = 1
         RepairCost = 10
+		RepairBonus = 0.1
+		MaintenanceCost = 2
+		MaintenanceBonus = 0.3
+        InspectionBonus = 60
 		Silent = false
     }
 }
