@@ -9,6 +9,7 @@
 		RepairBonus = 1
 		MaintenanceCost = 1
 		MaintenanceBonus = 1
+        InspectionBonus = 240
 		Silent = false
     }
 }
