@@ -9,6 +9,7 @@
 		RepairBonus = 0.1
 		MaintenanceCost = 1
 		MaintenanceBonus = 0.3
+        InspectionBonus = 240
 		Silent = false
     }
 }
