@@ -9,6 +9,7 @@
 		RepairBonus = 0.1
 		MaintenanceCost = 1
 		MaintenanceBonus = 0.2
+        InspectionBonus = 120
         MinTC = 60
         MaxTC = 240
 		Silent = false
